--- a/twentytwelve-new/style.css
+++ b/twentytwelve-new/style.css
@@ -56,7 +56,7 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
 	margin: 0;
 	padding: 0;
 	border: 0;
-	font-size: 100%;
+	/*font-size: 100%;*/
 	vertical-align: baseline;
 }
 body {
@@ -183,7 +183,7 @@ img {
 .archive-title,
 .page-title,
 .widget-title,
-.entry-content th,
+ th,
 .comment-content th {
 	font-size: 20px;
 	line-height: 2.181818182;
@@ -313,7 +313,7 @@ input[type="reset"]:active {
 }
 
 /* Responsive images */
-.entry-content img,
+ img,
 .comment-content img,
 .widget img {
 	max-width: 100%; /* Fluid images for posts, comments, and widgets */
@@ -338,7 +338,7 @@ object,
 video {
 	max-width: 100%;
 }
-.entry-content .twitter-tweet-rendered {
+ .twitter-tweet-rendered {
 	max-width: 100% !important; /* Override the Twitter embed fixed width */
 }
 
@@ -354,7 +354,7 @@ video {
 	margin-left: auto;
 	margin-right: auto;
 }
-.entry-content img,
+ img,
 .comment-content img,
 .widget img,
 img.header-image,
@@ -362,7 +362,7 @@ img.header-image,
 img.wp-post-image {
 	/* Add fancy borders to all WordPress-added images but not things like badges and icons and the like */
 	border-radius: 3px;
-	box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
+	/*box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);*/
 }
 .wp-caption {
 	max-width: 100%; /* Keep wide captions from overflowing their container. */
@@ -386,7 +386,7 @@ img.wp-smiley,
 	margin-top: 0;
 	padding: 0;
 }
-.entry-content dl.gallery-item {
+ dl.gallery-item {
 	margin: 0;
 }
 .gallery-item a,
@@ -494,9 +494,11 @@ body.custom-font-enabled {
 a {
 	outline: none;
 	color: #21759b;
+	text-decoration: none;
 }
 a:hover {
 	color: #0f3647;
+	text-decoration: none;
 }
 
 /* Assistive text */
@@ -545,9 +547,10 @@ a:hover {
 
 /* Header */
 .site-header {
-	padding: 24px 0;
-	padding: 1.714285714rem 0;
-	border-bottom: 1px solid #ededed;
+	/*padding: 24px 0;*/
+	/*padding: 1.714285714rem 0;*/
+	/*padding: 10px 0;*/
+	/*border-bottom: 1px solid #ededed;*/
 }
 .site-header h1,
 .site-header h2 {
@@ -582,6 +585,11 @@ a:hover {
 	margin-top: 1.714285714rem;
 }
 
+.main-logo{}
+.main-logo img{
+	width: 100%;
+}
+
 /* Navigation Menu */
 .main-navigation {
 	/*margin-top: 24px;*/
@@ -591,8 +599,8 @@ a:hover {
 .main-navigation li {
 	margin-top: 24px;
 	margin-top: 1.714285714rem;
-	font-size: 12px;
-	font-size: 0.857142857rem;
+	font-size: 14px;
+	font-size: 1rem;
 	line-height: 1.42857143;
 }
 .main-navigation a {
@@ -756,65 +764,65 @@ article.sticky .featured-post {
 	margin-bottom: 1.714285714rem;
 	text-align: center;
 }
-.entry-content,
-.entry-summary,
+
+*,.entry-summary,
 .mu_register {
 	line-height: 1.714285714;
 }
-.entry-content h1,
+ h1,
 .comment-content h1,
-.entry-content h2,
+ h2,
 .comment-content h2,
-.entry-content h3,
+ h3,
 .comment-content h3,
-.entry-content h4,
+ h4,
 .comment-content h4,
-.entry-content h5,
+ h5,
 .comment-content h5,
-.entry-content h6,
+ h6,
 .comment-content h6 {
 	margin: 24px 0;
 	margin: 1.714285714rem 0;
 	line-height: 1.714285714;
 }
-.entry-content h1,
+ h1,
 .comment-content h1 {
-	font-size: 21px;
-	font-size: 1.5rem;
+	 font-size: 31px;
+	 font-size: 2.2rem;
 	line-height: 1.5;
 }
-.entry-content h2,
+ h2,
 .comment-content h2,
 .mu_register h2 {
-	font-size: 18px;
-	font-size: 1.285714286rem;
+	 font-size: 28px;
+	 font-size: 2rem;
 	line-height: 1.6;
 }
-.entry-content h3,
+ h3,
 .comment-content h3 {
-	font-size: 16px;
-	font-size: 1.142857143rem;
+	 font-size: 24px;
+	 font-size: 1.7rem;
 	line-height: 1.846153846;
 }
-.entry-content h4,
+ h4,
 .comment-content h4 {
-	font-size: 14px;
-	font-size: 1rem;
+	 font-size: 21px;
+	 font-size: 1.5rem;
 	line-height: 1.846153846;
 }
-.entry-content h5,
+ h5,
 .comment-content h5 {
-	font-size: 13px;
-	font-size: 0.928571429rem;
+	 font-size: 18px;
+	 font-size: 1.3rem;
 	line-height: 1.846153846;
 }
-.entry-content h6,
+ h6,
 .comment-content h6 {
-	font-size: 12px;
-	font-size: 0.857142857rem;
+	 font-size: 16px;
+	 font-size: 1.15rem;
 	line-height: 1.846153846;
 }
-.entry-content p,
+ p,
 .entry-summary p,
 .comment-content p,
 .mu_register p {
@@ -822,48 +830,48 @@ article.sticky .featured-post {
 	margin: 0 0 1.714285714rem;
 	line-height: 1.714285714;
 }
-.entry-content a:visited,
+ a:visited,
 .comment-content a:visited {
 	color: #9f9f9f;
 }
-.entry-content .more-link {
+ .more-link {
 	white-space: nowrap;
 }
-.entry-content ol,
+ ol,
 .comment-content ol,
-.entry-content ul,
+ ul,
 .comment-content ul,
 .mu_register ul {
 	margin: 0 0 24px;
 	margin: 0 0 1.714285714rem;
 	line-height: 1.714285714;
 }
-.entry-content ul ul,
+ ul ul,
 .comment-content ul ul,
-.entry-content ol ol,
+ ol ol,
 .comment-content ol ol,
-.entry-content ul ol,
+ ul ol,
 .comment-content ul ol,
-.entry-content ol ul,
+ ol ul,
 .comment-content ol ul {
 	margin-bottom: 0;
 }
-.entry-content ul,
+ ul,
 .comment-content ul,
 .mu_register ul {
 	list-style: disc outside;
 }
-.entry-content ol,
+ ol,
 .comment-content ol {
 	list-style: decimal outside;
 }
-.entry-content li,
+ li,
 .comment-content li,
 .mu_register li {
 	margin: 0 0 0 36px;
 	margin: 0 0 0 2.571428571rem;
 }
-.entry-content blockquote,
+ blockquote,
 .comment-content blockquote {
 	margin-bottom: 24px;
 	margin-bottom: 1.714285714rem;
@@ -871,18 +879,18 @@ article.sticky .featured-post {
 	padding: 1.714285714rem;
 	font-style: italic;
 }
-.entry-content blockquote p:last-child,
+ blockquote p:last-child,
 .comment-content blockquote p:last-child {
 	margin-bottom: 0;
 }
-.entry-content code,
+ code,
 .comment-content code {
 	font-family: Consolas, Monaco, Lucida Console, monospace;
 	font-size: 12px;
 	font-size: 0.857142857rem;
 	line-height: 2;
 }
-.entry-content pre,
+ pre,
 .comment-content pre {
 	border: 1px solid #ededed;
 	color: #666;
@@ -896,20 +904,20 @@ article.sticky .featured-post {
 	padding: 24px;
 	padding: 1.714285714rem;
 }
-.entry-content pre code,
+ pre code,
 .comment-content pre code {
 	display: block;
 }
-.entry-content abbr,
+ abbr,
 .comment-content abbr,
-.entry-content dfn,
+ dfn,
 .comment-content dfn,
-.entry-content acronym,
+ acronym,
 .comment-content acronym {
 	border-bottom: 1px dotted #666;
 	cursor: help;
 }
-.entry-content address,
+ address,
 .comment-content address {
 	display: block;
 	line-height: 1.714285714;
@@ -934,30 +942,30 @@ img.aligncenter,
 	margin-bottom: 12px;
 	margin-bottom: 0.857142857rem;
 }
-.entry-content embed,
-.entry-content iframe,
-.entry-content object,
-.entry-content video {
+ embed,
+ iframe,
+ object,
+ video {
 	margin-bottom: 24px;
 	margin-bottom: 1.714285714rem;
 }
-.entry-content dl,
+ dl,
 .comment-content dl {
 	margin: 0 24px;
 	margin: 0 1.714285714rem;
 }
-.entry-content dt,
+ dt,
 .comment-content dt {
 	font-weight: bold;
 	line-height: 1.714285714;
 }
-.entry-content dd,
+ dd,
 .comment-content dd {
 	line-height: 1.714285714;
 	margin-bottom: 24px;
 	margin-bottom: 1.714285714rem;
 }
-.entry-content table,
+ table,
 .comment-content table {
 	border-bottom: 1px solid #ededed;
 	color: #757575;
@@ -968,14 +976,14 @@ img.aligncenter,
 	margin: 0 0 1.714285714rem;
 	width: 100%;
 }
-.entry-content table caption,
+ table caption,
 .comment-content table caption {
 	font-size: 16px;
 	font-size: 1.142857143rem;
 	margin: 24px 0;
 	margin: 1.714285714rem 0;
 }
-.entry-content td,
+ td,
 .comment-content td {
 	border-top: 1px solid #ededed;
 	padding: 6px 10px 6px 0;
@@ -1035,11 +1043,11 @@ footer.entry-meta {
 /* =Single audio/video attachment view
 -------------------------------------------------------------- */
 
-.attachment .entry-content .mejs-audio {
+.attachment  .mejs-audio {
 	max-width: 400px;
 }
 
-.attachment .entry-content .mejs-container {
+.attachment  .mejs-container {
 	margin-bottom: 24px;
 }
 
@@ -1134,11 +1142,11 @@ article.format-link header {
 	background-color: #ebebeb;
 	border-radius: 3px;
 }
-article.format-link .entry-content {
+article.format-link  {
 	max-width: 80%;
 	float: left;
 }
-article.format-link .entry-content a {
+article.format-link  a {
 	font-size: 22px;
 	font-size: 1.571428571rem;
 	line-height: 1.090909091;
@@ -1146,12 +1154,12 @@ article.format-link .entry-content a {
 }
 
 /* Quote posts */
-article.format-quote .entry-content p {
+article.format-quote  p {
 	margin: 0;
 	padding-bottom: 24px;
 	padding-bottom: 1.714285714rem;
 }
-article.format-quote .entry-content blockquote {
+article.format-quote  blockquote {
 	display: block;
 	padding: 24px 24px 0;
 	padding: 1.714285714rem 1.714285714rem 0;
@@ -1597,6 +1605,7 @@ img#wpstats {
 		overflow: hidden;
 		clip: rect(1px, 1px, 1px, 1px);
 		text-align: left;
+		box-shadow: 0 5px 7px -1px rgba(0, 0, 0, 0.25);
 	}
 	.main-navigation li ul ul {
 		top: 0;
@@ -1611,6 +1620,9 @@ img#wpstats {
 		height: inherit;
 		width: inherit;
 	}
+	.main-navigation li ul li{
+		margin: 0;
+	}
 	.main-navigation li ul li a {
 		background: #efefef;
 		border-bottom: 1px solid #ededed;
@@ -1620,8 +1632,9 @@ img#wpstats {
 		line-height: 2.181818182;
 		padding: 8px 10px;
 		padding: 0.571428571rem 0.714285714rem;
-		width: 180px;
-		width: 12.85714286rem;
+		/*width: 180px;*/
+		/*width: 12.85714286rem;*/
+		width: 220px;
 		white-space: normal;
 	}
 	.main-navigation li ul li a:hover,
@@ -1738,7 +1751,7 @@ body {
 	a {
 		text-decoration: none;
 	}
-	.entry-content img,
+	 img,
 	.comment-content img,
 	.author-avatar img,
 	img.wp-post-image {
@@ -1825,4 +1838,23 @@ body {
 		margin-left: 50px;
 		margin-left: 3.57142857rem;
 	}
+}
+
+
+.woocommerce .col-1, .woocommerce .col-2{ max-width:none;}
+
+span.woocommerce-input-wrapper {
+	display: block !important;
+	width: 100%;
+}
+
+.woocommerce-billing-fields label {
+	display: block !important;
+	width: 100%;
+}
+
+
+
+.woocommerce-product-gallery {
+
 }
